MazeRunner Graph